--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/290860.pt">#Rio450</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262678.pt">Equipes britânicas de remo estão no Rio de Janeiro</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/baroness-warsi-meets-bangladesh-political-leaders-in-dhaka">Baroness Warsi meets Bangladesh political leaders in Dhaka</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-morocco-celebrates-queens-birthday--2">British Embassy in Morocco celebrates Queen’s Birthday</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-government-marks-30-years-of-international-scholarships--3">UK Government marks 30 years of International scholarships</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-uk-support-for-700000-people-affected-by-2012-floods">New UK support for 700,000 people affected by 2012 floods</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-david-lidington-visits-poland--2">Minister for Europe David Lidington visits Poland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240209.pt">Indústria criativa britânica se apresenta para jovens brasileiros</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210686.zh-tw">台英組織簽訂合作，開放資料邁向國際</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/world-day-against-the-death-penalty">World Day Against the Death Penalty</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/209252.pt">Tecnologias para Grandes Eventos é tema de Seminário GREAT em SP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/futures-congress-with-large-presence-of-uk-experts-in-chile--2">Futures Congress with large presence of UK experts in Chile</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
