--- a/document-types/statutory_instrument.html
+++ b/document-types/statutory_instrument.html
@@ -366,7 +366,7 @@
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-reach-etc-amendment-regulations-2021">The REACH etc. (Amendment ) Regulations 2021</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-money-laundering-and-terrorist-financing-amendment-eu-exit-regulations-2020">The Money Laundering and Terrorist Financing (Amendment) (EU Exit) Regulations 2020</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-drivers-hours-and-tachographs-amendment-regulations-2021">The Drivers&rsquo; Hours and Tachographs (Amendment) Regulations 2021</a></li>
-<li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-human-medicines-amendment-eu-exit-regulations-2021">The Human Medicines (Amendment) (EU Exit) Regulations 2021</a></li>
+<li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-human-medicines-amendment-eu-exit-regulations-2021">The Human Medicines (Amendment) (EU Exit) Regulations 2021(withdrawn) </a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-freedom-of-information-act-2000-amendment-eu-exit-regulations-2018">The Freedom of Information Act 2000 (Amendment) (EU Exit) Regulations 2018</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-audiovisual-media-services-amendment-regulations-2021">The Audiovisual Media Services (Amendment) Regulations 2021</a></li>
 <li><a href="https://www.gov.uk/eu-withdrawal-act-2018-statutory-instruments/the-capital-requirements-regulation-amendment-eu-exit-regulations-2021">The Capital Requirements Regulation (Amendment) (EU Exit) Regulations 2021</a></li>
