--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -363,15 +363,15 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/world-location-news/290860.pt">#Rio450</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262678.pt">Equipes britânicas de remo estão no Rio de Janeiro</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/baroness-warsi-meets-bangladesh-political-leaders-in-dhaka">Baroness Warsi meets Bangladesh political leaders in Dhaka</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-morocco-celebrates-queens-birthday--2">British Embassy in Morocco celebrates Queen’s Birthday</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-government-marks-30-years-of-international-scholarships--3">UK Government marks 30 years of International scholarships</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-uk-support-for-700000-people-affected-by-2012-floods">New UK support for 700,000 people affected by 2012 floods</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-david-lidington-visits-poland--2">Minister for Europe David Lidington visits Poland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-runs-second-successful-course-about-understanding-nato--2">UK delegation runs second successful course about understanding NATO</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/britain-to-extend-assistance-to-combat-ebola-in-west-africa">Britain to extend assistance to combat Ebola in West Africa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
