--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -446,15 +446,15 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.brent.gov.uk" class="govuk-link">London Borough of Brent Council</a></li>
-      <li><a href="http://www.workplacepensions.gov.uk/" class="govuk-link">Workplace Pensions</a></li>
-      <li><a href="http://www.reading.gov.uk/" class="govuk-link">Reading Borough Council</a></li>
-      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
-      <li><a href="http://www.cotswold.gov.uk" class="govuk-link">Cotswold District Council</a></li>
-      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
       <li><a href="http://www.aylesburyvaledc.gov.uk/" class="govuk-link">Aylesbury Vale District Council</a></li>
-      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="http://www.workplacepensions.gov.uk/" class="govuk-link">Workplace Pensions</a></li>
+      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
+      <li><a href="http://www.brent.gov.uk" class="govuk-link">London Borough of Brent Council</a></li>
+      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
+      <li><a href="http://www.reading.gov.uk/" class="govuk-link">Reading Borough Council</a></li>
+      <li><a href="http://www.lbhf.gov.uk/" class="govuk-link">London Borough of Hammersmith and Fulham Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
       <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
