--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/215466.es">&ldquo;España es una de las naciones europeas líderes en el ámbito científico&hellip;por lo que es muy importante para nosotros&rdquo;</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197379.zh-tw">英國貿易文化辦事處休館公告</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-trade-and-investment-announcements-highlight-strength-of-uk-taiwan-bilateral-relations--2">New trade and investment announcements highlight strength of UK-Taiwan bilateral relations</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/287987.pt">Consulado promove recepção para empresas de Petróleo e Gás</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210510.zh-tw">英國慶祝世界人權日 讚許台灣人權發展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/%E5%8A%A0%E5%BC%B7%E9%9B%99%E9%82%8A%E6%99%BA%E8%B2%A1%E6%AC%8A%E5%90%88%E4%BD%9C-%E8%8B%B1%E5%9C%8B%E8%88%87%E5%8F%B0%E7%81%A3%E7%B0%BD%E7%BD%B2%E6%99%BA%E6%85%A7%E8%B2%A1%E7%94%A2%E6%AC%8A%E5%90%88%E4%BD%9C%E5%82%99%E5%BF%98%E9%8C%84">加強雙邊智財權合作 英國與台灣簽署智慧財產權合作備忘錄</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/246875.es-419">Abrió la inscripción a las becas Chevening</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/173029.lt">Lietuvos kariai tarnaus JK vadovaujamoje ES kovinėje grupėje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/president-pierre-buyoya-opens-second-wilton-park-conference-on-peacebuilding-in-africa-in-addis-ababa--2">President Pierre Buyoya opens second Wilton Park conference on ‘Peacebuilding in Africa’ in Addis Ababa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--6">國家海洋安全戰略</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257425.ja">英国ショッピングウィークを今秋、日本で初開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/professor-charles-hendry-the-prime-minister-s-trade-envoy-to-kazakhstan-visits-kazakhstan">Professor Charles Hendry, the Prime Minister’s Trade Envoy to Kazakhstan, visits Kazakhstan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/twenty-third-session-of-the-universal-periodic-review-geneva-2-to-13-november-2015--2">Twenty-Third Session of the Universal Periodic Review, Geneva, 2 to 13 November 2015</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
